--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,24 @@
 .App-link {
   color: #61dafb;
 }
-
+.register{
+  margin-left: 30%;
+}
+.inputBox {
+  padding: 7px;
+  display: block;
+  border: 1px solid skyblue;
+  width: 300px;
+  margin: 20px;
+}
+.appButton {
+  margin: 20px;
+  width: 150px;
+  padding: 10px;
+  background-color: skyblue;
+  border: solid 1px;
+  cursor: pointer;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
