--- a/src/App.css
+++ b/src/App.css
@@ -71,8 +71,16 @@
 .product-list ul{
   margin:0;
 }
-
-
+.search-product-box{
+  width: 400px;
+    margin: 20px;
+    height: 38px;
+    padding-left: 30px;
+    border: solid 1px skyblue;
+}
+.nav-right{
+  text-align: right;
+}
 .invalid-input {
   display: block;
   color: red;
